<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="routing_options"
        android:title="@string/routing_options" >

        <!-- <CheckBoxPreference android:key="wheelchair_accessible" android:defaultValue="false" android:summary="@string/wheelchair_accessibility_description" android:title="@string/wheelchair_accessible"></CheckBoxPreference> -->
        <EditTextPreference
            android:defaultValue="@integer/max_walking_distance"
            android:key="max_walking_distance"
            android:numeric="integer"
            android:title="@string/maximum_walk" >
        </EditTextPreference>
        <!-- <CheckBoxPreference android:title="@string/auto_detect_server" android:key="auto_detect_server" android:summary="@string/auto_detect_server_description" android:defaultValue="true" android:checked="true"></CheckBoxPreference> -->
        <!-- <Preference android:title="@string/refresh_server_list" android:key="refresh_server_list"/> -->
        <!-- <CheckBoxPreference android:title="@string/selected_custom_server_title" android:key="selected_custom_server" android:defaultValue="false"  android:summary="@string/selected_custom_server_description"></CheckBoxPreference> -->
        <!-- <EditTextPreference android:key="custom_server_url" android:title="@string/custom_server_url" android:inputType="text|textNoSuggestions" android:hint="@string/custom_server_url_hint"></EditTextPreference> -->

    </PreferenceCategory>
    <PreferenceCategory
        android:key="map_options"
        android:title="@string/map_options" >

        <!-- <CheckBoxPreference -->
        <!-- android:checked="true" -->
        <!-- android:defaultValue="true" -->
        <!-- android:key="use_intelligent_markers" -->
        <!-- android:summary="@string/use_intelligent_markers_description" -->
        <!-- android:title="@string/use_intelligent_markers_title" > -->
        <!-- </CheckBoxPreference> -->
        <!-- <CheckBoxPreference -->
        <!-- android:checked="true" -->
        <!-- android:defaultValue="true" -->
        <!-- android:key="use_android_geocoder" -->
        <!-- android:summary="@string/use_android_geocoder_description" -->
        <!-- android:title="@string/use_android_geocoder_title" > -->
        <!-- </CheckBoxPreference> -->


        <!-- <ListPreference -->
        <!-- android:key="geocoder_provider" -->
        <!-- android:title="@string/geocoder_preference_provider_title" > -->
        <!-- </ListPreference> -->
        <ListPreference
            android:key="map_tile_source"
            android:title="@string/map_tile_provider" >
        </ListPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="feedback_options"
        android:title="@string/feedback" >
        <Preference
            android:key="otp_provider_feedback"
            android:title="@string/feedback_email_android_developer" />
    </PreferenceCategory>

</PreferenceScreen>