<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_texture"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/rr_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/ll_header"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/layer_header_green" />

        <ImageView
            android:id="@+id/logo_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/logo_header" />

        <TextView
            android:id="@+id/textViewApp"
            style="@style/ShadowBarText"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_toRightOf="@+id/logo_header"
            android:gravity="center"
            android:text="@string/activity_trip"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textViewApp"
            android:layout_marginTop="5dp"
            android:gravity="right"
            android:paddingRight="20dp"
            android:text="BETA"
            android:textColor="@color/black"
            android:textStyle="bold|italic" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rr_header"
        android:layout_centerHorizontal="true"
        android:padding="20dp" >

        <EditText
            android:id="@+id/et_mail"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/layer_green"
            android:hint="@string/login_email"
            android:inputType="textNoSuggestions"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" >
        </EditText>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/et_mail"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/layer_green"
            android:hint="@string/login_password"
            android:inputType="textPassword|textNoSuggestions"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" >
        </EditText>

        <Button
            android:id="@+id/btn_login"
            style="@style/ShadowBarText"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/et_password"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/layer_orange"
            android:text="@string/login_login"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_forgot_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/btn_login"
            android:layout_marginTop="15dp"
            android:gravity="right"
            android:text="@string/login_forgot"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_sign_up"
            style="@style/ShadowBarText"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/layer_orange"
            android:text="@string/login_register"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>