<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rr_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/layer_header_green" >

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/textViewApp"
            style="@style/ShadowBarText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btn_options"
            android:layout_toRightOf="@+id/btn_back"
            android:gravity="center_horizontal"
            android:text="@string/step_by_step_title"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btn_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:background="@null"
            android:src="@drawable/icon_blank" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/step_by_step_header_from"
            android:textColor="#C0C0C0"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fromHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/step_by_step_header_to"
            android:textColor="#C0C0C0"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/toHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/step_by_step_header_departure"
                android:textColor="#C0C0C0"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/departureTimeHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/step_by_step_header_arrival"
                android:textColor="#C0C0C0"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/arrivalTimeHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <Spinner
        android:id="@+id/itinerarySelection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/alternative_routes" >
    </Spinner>

</LinearLayout>