<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_texture"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/rr_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/ll_header"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/layer_header_green" />

        <ImageView
            android:id="@+id/logo_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/logo_header" />

        <TextView
            android:id="@+id/textViewApp"
            style="@style/ShadowBarText"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_toRightOf="@+id/logo_header"
            android:gravity="center"
            android:text="@string/activity_trip"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_back"
        android:layout_below="@+id/rr_header"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp" >

            <TextView
                android:id="@+id/txt_terms"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:textColor="@color/black" >
            </TextView>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_back"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/btn_decline"
            style="@style/ShadowBarText"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_weight=".50"
            android:background="@drawable/layer_orange"
            android:text="@string/sign_up_decline"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_accept"
            style="@style/ShadowBarText"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_weight=".50"
            android:background="@drawable/layer_orange"
            android:text="@string/sign_up_accept"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>